--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 canvas{
-
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -14,6 +13,7 @@ canvas{
 
 .but1{
   width: 200px;
+  height: 30px;
   border-radius: 2px;
   border-style: double;
   border-color: grey;
